apps/base/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-tailnet
  namespace: logging
  annotations:
    tailscale.com/hostname: "loki"
    tailscale.com/tags: "tag:k8s-loki"
    tailscale.com/proxy-group: ingress
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
    app.kubernetes.io/component: single-binary
  ports:
    - name: http
      port: 3100
      targetPort: http-metrics
